--- a/index.html
+++ b/index.html
@@ -113,6 +113,8 @@
     <!--review section starts here-->
     <section class="review" id="review">
       <h1 class="heading">customer's <span> review</span></h1>
+
+      <div class="review-container">
       <div class="container1">
         <div class="box">
           <img src="img/person1.png.jpg" alt="" class="quote" />
@@ -145,6 +147,8 @@
             can't wait to see what they have in store next.
           </p>
         </div>
+      </div>
+
       </div>
       <button
         type="button"
