--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <a href="#about">about</a>
         <a href="#menu">Games offered</a>
         <a href="#review">review</a>
-        <a href="#contact">contact</a>
+        <a href="#contact">add review</a>
       </nav>
       <div class="icons">
         <a href="#"><i class="fas fa-search" id="search-btn"></i></a>
@@ -43,6 +43,7 @@
       </div>
     </header>
     <!--header section ends-->
+    
     <!--home section starts here-->
     <section class="home" id="home">
       <div class="content">
@@ -75,6 +76,7 @@
       </div>
     </section>
     <!--home section ends here-->
+
     <!--about section starts here-->
 
     <section class="about" id="about">
@@ -104,12 +106,14 @@
       </div>
     </section>
     <!--about section ends here-->
+
     <!--menu section -->
     <section class="menu" id="menu">
       <h1 class="heading">Games<span> we offer</span></h1>
       <div id="games-container" id="games"></div>
     </section>
     <!--end of menu section-->
+
     <!--review section starts here-->
     <section class="review" id="review">
       <h1 class="heading">customer's <span> review</span></h1>
@@ -150,7 +154,13 @@
       </div>
 
       </div>
-      <button
+    </section>
+    <!--review section ends here-->
+
+    <!--contact section starts here-->
+    <section class="contact" id="contact"></section>
+    <h1 class="heading">Tell us<span> more</span></h1>
+       <button
         type="button"
         class="btn btn-primary"
         data-bs-toggle="modal"
@@ -207,12 +217,6 @@
           </div>
         </div>
       </div>
-    </section>
-    <!--review section ends here-->
-
-    <!--contact section starts here-->
-    <section class="contact" id="contact"></section>
-    <h1 class="heading">contact<span> us</span></h1>
 
     <!--contact section ends here-->
 
