--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <link rel="stylesheet" href="./css/syle.css" />
   </head>
   <body>
-    <!--header section starts -->
 
+    <!--header section starts -->
     <header class="header">
       <a href="#" class="logo">
         <img class="lag" src="img/arcadian2.png" alt="" />
@@ -35,11 +35,6 @@
         <a href="#"><i class="fas fa-search" id="search-btn"></i></a>
         <a href="#"><i class="fas fa-shopping-cart" id="cart-btn"></i></a>
         <a href="#"><i class="fas fa-bars" id="menu-btn"></i></a>
-      </div>
-
-      <div class="search-form">
-        <input type="search" id="search-box" placeholder="search here..." />
-        <label for="search-box" class="fas fa-search"></label>
       </div>
     </header>
     <!--header section ends-->
@@ -78,7 +73,6 @@
     <!--home section ends here-->
 
     <!--about section starts here-->
-
     <section class="about" id="about">
       <h1 class="heading"><span></span> ABOUT US</h1>
       <div class="row">
@@ -107,12 +101,12 @@
     </section>
     <!--about section ends here-->
 
-    <!--menu section -->
+    <!--games offered section starts here-->
     <section class="menu" id="menu">
       <h1 class="heading">Games<span> we offer</span></h1>
       <div id="games-container" id="games"></div>
     </section>
-    <!--end of menu section-->
+    <!--games offered section ends here-->
 
     <!--review section starts here-->
     <section class="review" id="review">
@@ -157,7 +151,7 @@
     </section>
     <!--review section ends here-->
 
-    <!--contact section starts here-->
+    <!--add review section starts here-->
     <section class="contact" id="contact"></section>
     <h1 class="heading">Tell us<span> more</span></h1>
        <button
@@ -218,9 +212,9 @@
         </div>
       </div>
 
-    <!--contact section ends here-->
+    <!--add review section ends here-->
 
-    <!--custom js file link-->
+    <!--custom js file link & bootstrap-->
     <script src="/js/index.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
