added live link

--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
     <link rel="stylesheet" href="./css/syle.css" />
   </head>
   <body>
-
     <!--header section starts -->
     <header class="header">
       <a href="#" class="logo">
@@ -38,7 +37,7 @@
       </div>
     </header>
     <!--header section ends-->
-    
+
     <!--home section starts here-->
     <section class="home" id="home">
       <div class="content">
@@ -113,40 +112,40 @@
       <h1 class="heading">customer's <span> review</span></h1>
 
       <div class="review-container">
-      <div class="container1">
-        <div class="box">
-          <img src="img/person1.png.jpg" alt="" class="quote" />
-          <p id="review">
-            Hands down, Arcardian realm games is my go-to for all things gaming.
-            Their extensive selection of high-quality games, user-friendly
-            website, and top-notch customer service make them stand out from the
-            crowd. Whether I'm seeking thrilling adventures or captivating
-            narratives, they always deliver. Plus, their support team goes above
-            and beyond to ensure a seamless experience. If you're a gamer
-            looking for quality and convenience, look no further than Arcardian
-            realm games.
-          </p>
+        <div class="container1">
+          <div class="box">
+            <img src="img/person1.png.jpg" alt="" class="quote" />
+            <p id="review">
+              Hands down, Arcardian realm games is my go-to for all things
+              gaming. Their extensive selection of high-quality games,
+              user-friendly website, and top-notch customer service make them
+              stand out from the crowd. Whether I'm seeking thrilling adventures
+              or captivating narratives, they always deliver. Plus, their
+              support team goes above and beyond to ensure a seamless
+              experience. If you're a gamer looking for quality and convenience,
+              look no further than Arcardian realm games.
+            </p>
+          </div>
         </div>
-      </div>
-      <div class="container1">
-        <div class="box">
-          <img src="img/person2.png.jpg" alt="" class="quote2" />
-          <p id="review">
-            From captivating storylines to immersive gameplay, Arcardian realm
-            games consistently delivers top-notch gaming experiences. Their
-            attention to detail and dedication to quality shine through in every
-            game they produce. With a diverse range of titles catering to all
-            tastes, there's always something exciting to explore. The graphics
-            are stunning, the controls are intuitive, and the overall polish of
-            their games is unparalleled. Whether you're a casual gamer or a
-            hardcore enthusiast, Arcardian realm games offers something for
-            everyone. Their commitment to innovation and customer satisfaction
-            sets them apart in the industry. I've been a fan for years, and I
-            can't wait to see what they have in store next.
-          </p>
+        <div class="container1">
+          <div class="box">
+            <img src="img/person2.png.jpg" alt="" class="quote2" />
+            <p id="review">
+              From captivating storylines to immersive gameplay, Arcardian realm
+              games consistently delivers top-notch gaming experiences. Their
+              attention to detail and dedication to quality shine through in
+              every game they produce. With a diverse range of titles catering
+              to all tastes, there's always something exciting to explore. The
+              graphics are stunning, the controls are intuitive, and the overall
+              polish of their games is unparalleled. Whether you're a casual
+              gamer or a hardcore enthusiast, Arcardian realm games offers
+              something for everyone. Their commitment to innovation and
+              customer satisfaction sets them apart in the industry. I've been a
+              fan for years, and I can't wait to see what they have in store
+              next.
+            </p>
+          </div>
         </div>
-      </div>
-
       </div>
     </section>
     <!--review section ends here-->
@@ -154,63 +153,64 @@
     <!--add review section starts here-->
     <section class="contact" id="contact"></section>
     <h1 class="heading">Tell us<span> more</span></h1>
-       <button
-        type="button"
-        class="btn btn-primary"
-        data-bs-toggle="modal"
-        data-bs-target="#exampleModal"
-      >
-        ADD REVIEW
-      </button>
-      <div
-        class="modal fade"
-        id="exampleModal"
-        tabindex="-1"
-        aria-labelledby="exampleModalLabel"
-        aria-hidden="true"
-      >
-        <div class="modal-dialog">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h1 class="modal-title fs-5" id="exampleModalLabel">
-                GIVE REVIEWS
-              </h1>
-              <button
-                type="button"
-                class="btn-close"
-                data-bs-dismiss="modal"
-                aria-label="Close"
-              ></button>
-            </div>
-            <div class="modal-body">
-              <form>
-                <div class="mb-3">
-                  <label for="recipient-name" class="col-form-label"
-                    >Your review:</label
-                  >
-                  <input type="text" class="form-control" id="recipient-name" />
-                </div>
-                <div class="mb-3">
-                  <label for="message-text" class="col-form-label"
-                    >Message:</label
-                  >
-                  <textarea class="form-control" id="message-text"></textarea>
-                </div>
-              </form>
-            </div>
-            <div class="modal-footer">
-              <button
-                type="button"
-                class="btn btn-secondary"
-                data-bs-dismiss="modal"
-              >
-                Close
-              </button>
-              <button type="button" class="btn btn-primary">SUBMIT</button>
-            </div>
+    <button
+      type="button"
+      class="btn btn-primary"
+      data-bs-toggle="modal"
+      data-bs-target="#exampleModal"
+    >
+      ADD REVIEW
+    </button>
+    <div
+      class="modal fade"
+      id="exampleModal"
+      tabindex="-1"
+      aria-labelledby="exampleModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h1 class="modal-title fs-5" id="exampleModalLabel">
+              GIVE REVIEWS
+            </h1>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body">
+            <form>
+              <div class="mb-3">
+                <label for="recipient-name" class="col-form-label"
+                  >Your review:</label
+                >
+                <input type="text" class="form-control" id="recipient-name" />
+              </div>
+              <div class="mb-3">
+                <label for="message-text" class="col-form-label"
+                  >Message:</label
+                >
+                <textarea class="form-control" id="message-text"></textarea>
+              </div>
+            </form>
+          </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-bs-dismiss="modal"
+            >
+              Close
+            </button>
+
+            <button type="button" class="btn btn-primary">SUBMIT</button>
           </div>
         </div>
       </div>
+    </div>
 
     <!--add review section ends here-->
 
